feat: update quantity on image click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <img
       [src]="quantity() > index ? filledImageUrl : emptyImageUrl"
       *ngFor="let index of indexes"
+      (click)="quantity.set(index + 1)"
     />
   </div>
 </div>
